# mobility_viz

./: .gitignore  AUTHORS  CHANGELOG.md  LICENSE  README.md  pyproject.toml
emob_viz/: Map.py  Movement_Plot.py  Poi_Plot.py  Position_Plot.py  Source.py  Viz.py  test.py
emob_viz/conversion/: Html2Png.py  Png2Gif.py
emob_viz/exception/: SourceException.py
emob_viz/model/: Movement.py  Poi.py  Position.py
input/: dortmund.geojson
