[tool.poetry]
name = "mobility_viz"
version = "0.1.0"
description = ""
authors = ["ie3 institute - SIMONA team"]
license = "BSD3"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.3"
psycopg2 = "^2.9.3"
folium = "^0.12.1"
selenium = "^4.1.2"
imageio = "^2.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
